css/main.css
/**
 * COLORS:
 *
 * Pantone 16-4725 TPX Scuba Blue: #00B2CA
 */

@font-face {
    font-family: 'simplifica';
    src: url('fonts/simplifica/simplifica_typeface-webfont.eot');
    src: url('fonts/simplifica/simplifica_typeface-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/simplifica/simplifica_typeface-webfont.woff2') format('woff2'),
         url('fonts/simplifica/simplifica_typeface-webfont.woff') format('woff'),
         url('fonts/simplifica/simplifica_typeface-webfont.ttf') format('truetype'),
         url('fonts/simplifica/simplifica_typeface-webfont.svg#simplificasimplifica') format('svg');
    font-weight: normal;
    font-style: normal;
}

  html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
  font-family: simplifica;
}

body {
  padding: 5px;
}

#logo {
  background: url(../images/logo.png) top left no-repeat;
  height: 71px;
  margin: 0 auto;
  text-indent: -99999px;
  width: 118px;
}

#menu {
  font-size: 21px;
  overflow: hidden;
  margin-top: 15px;
  padding: 0;
  text-align: center;
}

#navbar {
  margin: 30px 5px 20px 5px;
  overflow: hidden;
}

@media screen and (min-width: 30em) {
  #logo { float: left; }
  #menu { float: right; margin: 0; }
  #navbar { margin: 30px 5px 50px 5px; }
}

#menu li {
  display: inline;
  list-style: none;
  line-height: 71px;
}

#menu a {
  border-left: 1px solid #00B2CA;
  color: #333;
  letter-spacing: 1px;
  padding: 0 1em;
  text-decoration: none;
  text-transform: uppercase;
}

#menu li:first-child a {
  border: 0;
}

#menu a.active,
#menu a:hover {
  color: #999;
}

#main {
  max-width: 1170px;
  margin: 0 auto;
}

.project {
  margin: 5px;
  position: relative;
}

.project a {
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.85);
  color: #00b2ca;
  height: 100%;
  position: absolute;
  text-transform: uppercase;
  width: 100%;

  opacity: 0;
  filter: alpha(opacity=0);

  -webkit-transition: all 100ms linear;
  -moz-transition: all 100ms linear;
  -o-transition: all 100ms linear;
  -ms-transition: all 100ms linear;
  transition: all 100ms linear;
}

.project a:hover {
  opacity: 1;
  filter: alpha(opacity=100);

  -webkit-transition: all 100ms linear;
  -moz-transition: all 100ms linear;
  -o-transition: all 100ms linear;
  -ms-transition: all 100ms linear;
  transition: all 100ms linear;
}

.project-name {
  font-size: 30px;
  left: 0;
  margin-top: -0.5em;
  padding: 10px;
  position: absolute;
  right: 0;
  text-align: center;
  top: 50%;
}

